fixed text-align left issue in projects.html

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,9 @@ body {
   align-self: center;
 }
 
-.main_container {
+.main_container2 {
+  text-align: center;
+  border: 2px solid red;
 }
 
 h1 {
@@ -137,6 +139,8 @@ h1 {
 
 .body2 {
   text-align: center;
+  position: fixed;
+  width: 100%;
 }
 
 .md2 {
@@ -192,6 +196,10 @@ h1 {
 
 .socials2 {
   display: none;
+}
+
+.container {
+  margin-top: 70px;
 }
 
 @media (max-width: 500px) {
@@ -291,7 +299,7 @@ h1 {
 }
 
 @media (min-width: 1160px) {
-  body {
+  .body1 {
     position: fixed;
   }
 }
